ci: sync fly binary after upgrade verification
- Add 'fly -t ci sync' step after upgrade in test-auto-mode and test-web-worker-mode
- Ensure local fly binary is updated to match the upgraded Concourse version
- Fix permission issue by changing ownership of /usr/local/bin/fly before sync

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,6 +201,8 @@ jobs:
           export CONCOURSE_URL=$(cat concourse-ip.txt)
           export CONCOURSE_PASSWORD=$(cat admin-password.txt)
           fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
+          sudo chown $(whoami) /usr/local/bin/fly
+          fly -t ci sync
           fly -t ci execute -c task.yml
 
       - name: Verify Folder Mounts
@@ -522,6 +524,8 @@ jobs:
           export CONCOURSE_URL=$(cat concourse-ip.txt)
           export CONCOURSE_PASSWORD=$(cat admin-password.txt)
           fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
+          sudo chown $(whoami) /usr/local/bin/fly
+          fly -t ci sync
           fly -t ci execute -c task.yml
 
       - name: Test worker tag targeting
