--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -592,74 +592,82 @@ jobs:
       - name: Add Juju Model
         run: juju add-model concourse-shared
 
-      - name: Deploy with Shared Storage (mode=auto)
+      - name: Deploy initial unit (mode=auto)
         run: |
-          # Deploy first unit (leader/web) with shared storage
           # The charm supports 'shared-storage=lxc' where it expects /var/lib/concourse to be shared.
-          # We use the setup-shared-storage.sh script to configure LXC mounts after deployment.
-          
           juju deploy --debug --verbose ./concourse-ci-machine_amd64.charm concourse-ci \
             --config mode=auto \
             --config version=7.14.2 \
             --config shared-storage=lxc
-            
           juju deploy postgresql --channel 16/stable
-          juju relate concourse-ci:postgresql postgresql:database
-          
-          # Wait for deployment to complete first
-          timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; done'
-          
-          # Now setup shared storage using the provided script
+
+      - name: Relate charms
+        run: juju relate concourse-ci:postgresql postgresql:database
+
+      - name: Wait for initial deployment
+        run: |
+          timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; done'
+
+      - name: Configure shared storage (initial)
+        run: |
+          # Setup shared storage using the provided script
           ./scripts/setup-shared-storage.sh concourse-ci $(pwd)/concourse-shared
 
-          # Wait for storage integration
+      - name: Wait for storage integration
+        run: |
           sleep 15
           juju-wait -m concourse-shared -t 900
-          
-          # Verify binaries downloaded
+
+      - name: Verify binaries in storage
+        run: |
           juju status -m concourse-shared
           echo "Verifying binaries in shared storage..."
           ls -lh $(pwd)/concourse-shared/bin/concourse
           
-      - name: Add Unit with Shared Storage
+      - name: Add second unit
         run: |
-          START_TIME=$(date +%s)
           juju add-unit concourse-ci
-          
-          # Wait for unit to join
-          timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; done'
-          
-          # Setup shared storage for the new unit using the script
+
+      - name: Wait for second unit
+        run: |
+           timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; done'
+
+      - name: Configure shared storage (second unit)
+        run: |
           ./scripts/setup-shared-storage.sh concourse-ci $(pwd)/concourse-shared
 
-          # Wait for storage integration on new unit
+      - name: Wait for second unit integration
+        run: |
           sleep 15
           juju-wait -m concourse-shared -t 900
           
-          END_TIME=$(date +%s)
-          DURATION=$((END_TIME - START_TIME))
-          echo "Unit addition took $DURATION seconds"
-          
-          # Verify unit 1 is active
-          juju status concourse-ci/1
-          
-          if [ "$DURATION" -gt 180 ]; then
-            echo "❌ Unit addition took too long (>3min)"
-            # exit 1  # Soft fail for now as CI performance varies
-            echo "WARNING: Performance target missed"
-          fi
+      - name: Verify unit 1 is active
+        run: juju status concourse-ci/1
 
       - name: Verify Shared Storage Usage
         run: |
           # Check if unit 1 reused binaries (log check or just status)
           juju debug-log --replay --include concourse-ci/1 | grep "Binaries .* already installed" || true
-          
-          # Verify filesystem ID matches (via ssh)
-          # (Skip ssh in CI if not setup, but we can trust the mount)
 
-      - name: Verify Folder Mounts (Worker 1)
+      - name: Get admin password
         run: |
-          # Create test directories
+          juju run concourse-ci/leader get-admin-password | grep "password:" | awk '{print $2}' > admin-password.txt
+          cat admin-password.txt
+
+      - name: Get Concourse IP
+        run: |
+          juju status --format=json | jq -r '.applications."concourse-ci".units | to_entries[] | select(.value."leader" == true) | .value."public-address"' > concourse-ip.txt
+          cat concourse-ip.txt
+
+      - name: Install fly CLI
+        run: |
+          CONCOURSE_IP=$(cat concourse-ip.txt)
+          curl -Lo fly "http://${CONCOURSE_IP}:8080/api/v1/cli?arch=amd64&platform=linux"
+          chmod +x ./fly
+          sudo mv ./fly /usr/local/bin/
+
+      - name: Prepare host mounts
+        run: |
           mkdir -p /tmp/config-test-mount
           echo "Hello Read-Only" > /tmp/config-test-mount/test_ro.txt
           
@@ -667,6 +675,8 @@ jobs:
           echo "Hello Read-Write" > /tmp/config-test-mount-writable/test_rw.txt
           chmod 777 /tmp/config-test-mount-writable
 
+      - name: Configure container mounts
+        run: |
           # Get container name for unit 1 (worker)
           UNIT="concourse-ci/1"
           MACHINE=$(juju status $UNIT --format=json | jq -r ".applications.\"concourse-ci\".units.\"$UNIT\".machine")
@@ -674,16 +684,11 @@ jobs:
           
           echo "Configuring mounts for $UNIT (Container: $CONTAINER)"
           
-          # Add mounts
           lxc config device add $CONTAINER config_test_ro disk source="/tmp/config-test-mount" path="/srv/config_test" readonly=true
           lxc config device add $CONTAINER config_test_rw disk source="/tmp/config-test-mount-writable" path="/srv/config_test_writable" readonly=false shift=true
           
-          # Run verification task
-          export CONCOURSE_URL=$(juju status concourse-ci/0 --format=json | jq -r '.applications."concourse-ci".units."concourse-ci/0"."public-address"')
-          export CONCOURSE_PASSWORD=$(juju run concourse-ci/0 get-admin-password --format=json | jq -r '."concourse-ci/0".results.password')
-          
-          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
-          
+      - name: Create mount verification task
+        run: |
           cat <<EOF > verify-mounts.yml
           platform: linux
           image_resource:
@@ -706,24 +711,33 @@ jobs:
               echo "Writing test" > /srv/config_test_writable/write_test.txt
               cat /srv/config_test_writable/write_test.txt
           EOF
-          
+
+      - name: Execute mount verification task
+        run: |
+          export CONCOURSE_URL=$(cat concourse-ip.txt)
+          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
+          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
           fly -t ci execute -c verify-mounts.yml
 
-      - name: Test Upgrade with Shared Storage (Concurrent Op)
+      - name: Trigger Upgrade
         run: |
           UPGRADE_VERSION="7.14.3"
           juju config concourse-ci version=$UPGRADE_VERSION
           juju run concourse-ci/leader upgrade version=$UPGRADE_VERSION
-          
+
+      - name: Wait for Upgrade
+        run: |
           sleep 30
           juju-wait -m concourse-shared -t 900
-          
-          # Verify upgrade
+
+      - name: Verify Upgrade
+        run: |
+          UPGRADE_VERSION="7.14.3"
           juju status concourse-ci
           cat $(pwd)/concourse-shared/.installed_version | grep "$UPGRADE_VERSION"
-          
-          # Verify locking occurred (T086 concurrent test coverage)
-          # One unit should have acquired lock, others waited
+
+      - name: Verify Locking
+        run: |
           echo "Checking for lock acquisition in logs..."
           juju debug-log --replay --include concourse-ci | grep "Acquiring shared storage lock" || true
 
@@ -774,84 +788,88 @@ jobs:
       - name: Add Juju Model
         run: juju add-model concourse-ss-ww
 
-      - name: Deploy separate Web and Worker with Shared Storage
+      - name: Deploy applications
         run: |
-          # Deploy web unit
           juju deploy ./concourse-ci-machine_amd64.charm concourse-web \
             --config mode=web \
             --config version=7.14.2 \
             --config shared-storage=lxc
-            
-          # Deploy worker unit
           juju deploy ./concourse-ci-machine_amd64.charm concourse-worker \
             --config mode=worker \
             --config version=7.14.2 \
             --config shared-storage=lxc
-
           juju deploy postgresql --channel 16/stable
+
+      - name: Relate charms
+        run: |
           juju relate concourse-web:postgresql postgresql:database
           juju relate concourse-web:web-tsa concourse-worker:worker-tsa
-          
-          # Wait for deployment to settle
-          timeout 900 bash -c 'while ! juju status -m concourse-ss-ww | grep -q "Waiting for shared storage mount"; do sleep 5; done'
-          
-          # Setup shared storage for both applications using the script
-          ./scripts/setup-shared-storage.sh concourse-web $(pwd)/concourse-shared-ww
-          ./scripts/setup-shared-storage.sh concourse-worker $(pwd)/concourse-shared-ww
 
-          # Wait for storage integration
+      - name: Wait for deployment
+        run: |
+          timeout 900 bash -c 'while ! juju status -m concourse-ss-ww | grep -q "Waiting for shared storage mount"; do sleep 5; done'
+
+      - name: Configure shared storage (web)
+        run: ./scripts/setup-shared-storage.sh concourse-web $(pwd)/concourse-shared-ww
+
+      - name: Configure shared storage (worker)
+        run: ./scripts/setup-shared-storage.sh concourse-worker $(pwd)/concourse-shared-ww
+
+      - name: Wait for storage integration
+        run: |
           sleep 15
           juju-wait -m concourse-ss-ww -t 900
-          
-          # Verify binaries downloaded by web
+
+      - name: Verify binaries in storage
+        run: |
           juju status -m concourse-ss-ww
           echo "Verifying binaries in shared storage..."
           ls -lh $(pwd)/concourse-shared-ww/bin/concourse
 
       - name: Verify Deployment
         run: |
-          # Check web status
           juju status concourse-web/0
-          
-          # Check worker status
           juju status concourse-worker/0
-          
-          # Check logs for worker reuse
           juju debug-log --replay --include concourse-worker/0 | grep "Binaries .* already installed" || true
 
-      - name: Verify Folder Mounts
+      - name: Get admin password
         run: |
-          # Create test directories
+          juju run concourse-web/leader get-admin-password | grep "password:" | awk '{print $2}' > admin-password.txt
+          cat admin-password.txt
+
+      - name: Get Concourse IP
+        run: |
+          juju status --format=json | jq -r '.applications."concourse-web".units | to_entries[] | select(.value."leader" == true) | .value."public-address"' > concourse-ip.txt
+          cat concourse-ip.txt
+
+      - name: Install fly CLI
+        run: |
+          CONCOURSE_IP=$(cat concourse-ip.txt)
+          curl -Lo fly "http://${CONCOURSE_IP}:8080/api/v1/cli?arch=amd64&platform=linux"
+          chmod +x ./fly
+          sudo mv ./fly /usr/local/bin/
+
+      - name: Prepare host mounts
+        run: |
           mkdir -p /tmp/config-test-mount
           echo "Hello Read-Only" > /tmp/config-test-mount/test_ro.txt
-          
           mkdir -p /tmp/config-test-mount-writable
           echo "Hello Read-Write" > /tmp/config-test-mount-writable/test_rw.txt
           chmod 777 /tmp/config-test-mount-writable
 
-          # Get container name for worker unit
+      - name: Configure container mounts
+        run: |
           UNIT="concourse-worker/0"
           MACHINE=$(juju status $UNIT --format=json | jq -r ".applications.\"concourse-worker\".units.\"$UNIT\".machine")
           CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${MACHINE}$" | head -1)
           
           echo "Configuring mounts for $UNIT (Container: $CONTAINER)"
           
-          # Add mounts
           lxc config device add $CONTAINER config_test_ro disk source="/tmp/config-test-mount" path="/srv/config_test" readonly=true
           lxc config device add $CONTAINER config_test_rw disk source="/tmp/config-test-mount-writable" path="/srv/config_test_writable" readonly=false shift=true
-          
-          # Run verification task
-          # Login using web unit IP
-          export CONCOURSE_URL=$(juju status concourse-web/0 --format=json | jq -r '.applications."concourse-web".units."concourse-web/0"."public-address"')
-          export CONCOURSE_PASSWORD=$(juju run concourse-web/0 get-admin-password --format=json | jq -r '."concourse-web/0".results.password')
-          
-          # Install fly
-          curl -Lo fly "http://${CONCOURSE_URL}:8080/api/v1/cli?arch=amd64&platform=linux"
-          chmod +x ./fly
-          sudo mv ./fly /usr/local/bin/
 
-          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
-          
+      - name: Create mount verification task
+        run: |
           cat <<EOF > verify-mounts.yml
           platform: linux
           image_resource:
@@ -874,7 +892,12 @@ jobs:
               echo "Writing test" > /srv/config_test_writable/write_test.txt
               cat /srv/config_test_writable/write_test.txt
           EOF
-          
+
+      - name: Execute mount verification task
+        run: |
+          export CONCOURSE_URL=$(cat concourse-ip.txt)
+          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
+          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
           fly -t ci execute -c verify-mounts.yml
 
       - name: Configure tagged worker
@@ -885,9 +908,8 @@ jobs:
 
       - name: Verify tagged task execution
         run: |
-          export CONCOURSE_URL=$(juju status concourse-web/0 --format=json | jq -r '.applications."concourse-web".units."concourse-web/0"."public-address"')
-          export CONCOURSE_PASSWORD=$(juju run concourse-web/0 get-admin-password --format=json | jq -r '."concourse-web/0".results.password')
-          
+          export CONCOURSE_URL=$(cat concourse-ip.txt)
+          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
           fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p "$CONCOURSE_PASSWORD"
           
           cat <<EOF > verify-tagged.yml
@@ -902,18 +924,20 @@ jobs:
           
           fly -t ci execute -c verify-tagged.yml --tag=special-worker
 
-      - name: Test Upgrade (Concurrent Op)
+      - name: Trigger Upgrade
         run: |
           UPGRADE_VERSION="7.14.3"
           juju config concourse-web version=$UPGRADE_VERSION
           juju config concourse-worker version=$UPGRADE_VERSION
           juju run concourse-web/leader upgrade version=$UPGRADE_VERSION
-          # Worker should upgrade via config change or relation
-          
+
+      - name: Wait for Upgrade
+        run: |
           sleep 30
           juju-wait -m concourse-ss-ww -t 900
-          
-          # Verify upgrade
+
+      - name: Verify Upgrade
+        run: |
           juju status concourse-web
           juju status concourse-worker
 
