--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -606,7 +606,7 @@ jobs:
 
       - name: Wait for initial deployment
         run: |
-          timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; juju status -m concourse-shared; done'
+          timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; juju status -m concourse-shared; juju status; done'
 
       - name: Configure shared storage (initial)
         run: |
@@ -630,7 +630,7 @@ jobs:
 
       - name: Wait for second unit
         run: |
-           timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; juju status -m concourse-shared; done'
+           timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; juju status -m concourse-shared; juju status; done'
 
       - name: Configure shared storage (second unit)
         run: |
