--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -618,7 +618,7 @@ jobs:
         run: |
           juju debug-log &
           PID="$!"
-          timeout 600 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju status -m concourse-shared; done'
+          timeout 300 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage"; do sleep 5; juju status -m concourse-shared; done'
           kill "$PID"
           fg
 
@@ -644,7 +644,11 @@ jobs:
 
       - name: Wait for second unit
         run: |
-           timeout 900 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage mount"; do sleep 5; juju debug-log -n 30; juju status -m concourse-shared; juju status; done'
+          juju debug-log &
+          PID="$!"
+          timeout 300 bash -c 'while ! juju status -m concourse-shared | grep -q "Waiting for shared storage"; do sleep 5; juju status -m concourse-shared; done'
+          kill "$PID"
+          fg
 
       - name: Configure shared storage (second unit)
         run: |
@@ -826,7 +830,11 @@ jobs:
 
       - name: Wait for deployment
         run: |
-          timeout 900 bash -c 'while ! juju status -m concourse-ss-ww | grep -q "Waiting for shared storage mount"; do sleep 5; done'
+          juju debug-log &
+          PID="$!"
+          timeout 300 bash -c 'while ! juju status -m concourse-ss-ww | grep -q "Waiting for shared storage"; do sleep 5; juju status -m concourse-ss-ww; done'
+          kill "$PID"
+          fg
 
       - name: Configure shared storage (web)
         run: ./scripts/setup-shared-storage.sh concourse-web $(pwd)/concourse-shared-ww
