Fix upgrade coordination and CI failure detection
- src/charm.py: Ensure storage coordinator is initialized before upgrade action.
- lib/storage_coordinator.py: Fix worker ready counting by reading unit data directly instead of relying on shared app state updates from workers.
- .github/workflows/ci.yml: Update upgrade steps to parse action result and fail the job if the action status is 'failed'. Add stronger verification checks.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -469,7 +469,12 @@ jobs:
           juju config worker version=$UPGRADE_VERSION
           
           echo "=== Upgrading web server (all workers should auto-upgrade via TSA relation) ==="
-          juju run web/leader upgrade version=$UPGRADE_VERSION
+          juju run web/leader upgrade version=$UPGRADE_VERSION --format=json > upgrade.json
+          cat upgrade.json
+          if jq -e '.. | .status? | select(. == "failed")' upgrade.json > /dev/null; then
+            echo "Upgrade action failed"
+            exit 1
+          fi
           
           echo "=== Waiting for web upgrade to complete ==="
           sleep 30
@@ -725,7 +730,12 @@ jobs:
         run: |
           UPGRADE_VERSION="7.14.3"
           juju config concourse-ci version=$UPGRADE_VERSION
-          juju run concourse-ci/leader upgrade version=$UPGRADE_VERSION
+          juju run concourse-ci/leader upgrade version=$UPGRADE_VERSION --format=json > upgrade.json
+          cat upgrade.json
+          if jq -e '.. | .status? | select(. == "failed")' upgrade.json > /dev/null; then
+            echo "Upgrade action failed"
+            exit 1
+          fi
 
       - name: Wait for Upgrade
         run: |
@@ -736,6 +746,7 @@ jobs:
         run: |
           UPGRADE_VERSION="7.14.3"
           juju status concourse-ci
+          juju status concourse-ci --format=json | jq -e '.applications."concourse-ci".units | to_entries | all(.value["workload-status"].status == "active")' || (echo "All workers must be active" && exit 1)
           cat $(pwd)/concourse-shared/.installed_version | grep "$UPGRADE_VERSION"
 
       - name: Verify Locking
@@ -932,7 +943,12 @@ jobs:
           UPGRADE_VERSION="7.14.3"
           juju config concourse-web version=$UPGRADE_VERSION
           juju config concourse-worker version=$UPGRADE_VERSION
-          juju run concourse-web/leader upgrade version=$UPGRADE_VERSION
+          juju run concourse-web/leader upgrade version=$UPGRADE_VERSION --format=json > upgrade.json
+          cat upgrade.json
+          if jq -e '.. | .status? | select(. == "failed")' upgrade.json > /dev/null; then
+            echo "Upgrade action failed"
+            exit 1
+          fi
 
       - name: Wait for Upgrade
         run: |
@@ -943,6 +959,8 @@ jobs:
         run: |
           juju status concourse-web
           juju status concourse-worker
+          juju status concourse-web --format=json | jq -e '.applications."concourse-web".units | to_entries | all(.value["workload-status"].status == "active")' || (echo "Web must be active" && exit 1)
+          juju status concourse-worker --format=json | jq -e '.applications."concourse-worker".units | to_entries | all(.value["workload-status"].status == "active")' || (echo "Workers must be active" && exit 1)
 
       - name: Cleanup
         if: always()
