feat(monitoring): add Prometheus metrics integration via prometheus_scrape interface
- Add MetricsEndpointProvider to expose Concourse metrics on port 9391
- Import prometheus_scrape library from prometheus_k8s charm
- Configure Prometheus to bind on 0.0.0.0:9391 when metrics enabled
- Update monitoring relation interface from 'monitoring' to 'prometheus_scrape'
- Enable automatic metrics discovery via Juju relation

This enables observability integration with Prometheus for monitoring
Concourse build metrics, worker health, and resource utilization.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -47,7 +47,7 @@ links:
 
 provides:
   monitoring:
-    interface: monitoring
+    interface: prometheus_scrape
     description: Prometheus metrics endpoint for monitoring integration
   
   web-tsa:
