feat: Add Concourse Prometheus Exporter support
Introduces a new exporter service to scrape Concourse API and expose Prometheus metrics.

Changes:
- Add `enable-metrics` configuration option (default: false)
- Add `src/templates/concourse-exporter.py`: Exporter script
- Add `lib/concourse_exporter.py`: Charm library for exporter management
- Update `src/charm.py`: Integrate exporter lifecycle
- Update `README.md`: Add metrics documentation

--- a/config.yaml
+++ b/config.yaml
@@ -81,9 +81,10 @@ options:
   
   enable-metrics:
     description: |
-      Enable Prometheus metrics endpoint on port 9391.
-      Default: true
-    default: true
+      Enable Prometheus metrics endpoint on port 9391 and per-job status exporter on port 9358.
+      When enabled, installs and runs concourse-exporter service that exposes job-level metrics.
+      Default: false
+    default: false
     type: boolean
   
   max-concurrent-downloads:
