feat(gpu): Add AMD GPU (ROCm) support alongside NVIDIA CUDA
This commit adds comprehensive AMD GPU support using ROCm runtime, enabling
the charm to support both NVIDIA and AMD GPUs for ML/AI workloads.

## Configuration Changes (config.yaml)
- Replace boolean 'enable-gpu' with string enum 'compute-runtime'
  - Values: 'none' (default), 'cuda' (NVIDIA), 'rocm' (AMD)
  - Allows explicit GPU vendor selection
  - Backward compatible: 'none' = disabled

## Core Implementation (lib/concourse_worker.py)
- Add _detect_gpu_type() method supporting 'cuda' and 'rocm'
- Add AMD Container Toolkit installation (amd-container-toolkit package)
- Add CDI specification generation for AMD GPUs (/etc/cdi/amd.json)
- Install rocm-smi tool for GPU monitoring in containers
- Add runc-amd-wrapper installation for device injection
- Update GPU device detection to support both NVIDIA and AMD
- Add ROCm-specific worker tags: 'rocm', 'gpu-count=N'

## Common Utilities (lib/concourse_common.py)
- Add detect_amd_gpus() function for AMD GPU discovery
- Add verify_amd_container_runtime() for AMD toolkit validation
- Refactor GPU detection to support multi-vendor systems
- Add AMD-specific device path handling (/dev/dri/card*, /dev/dri/renderD*)

## Charm Logic (src/charm.py)
- Update _update_status() to use compute-runtime config
- Add GPU type detection and display in unit status
- Update status messages: 'GPU: 1x NVIDIA' or 'GPU: 1x AMD'

## Documentation (README.md)
- Add comprehensive "AMD GPU Support (ROCm)" section
- Document multi-GPU system requirements and GPU ID selection
- Add critical LXD GPU passthrough guide for multi-vendor systems
- Include ROCm pipeline examples and troubleshooting
- Document ROCm container images (rocm/dev-ubuntu-24.04, etc.)
- Add ROCm verification commands and common issues

## Architecture
Host with Multi-GPU (NVIDIA + AMD)
  -> LXD GPU Passthrough (id=1 targeting AMD only)
      -> Worker Container
          -> AMD Container Toolkit
          -> CDI: /etc/cd

--- a/config.yaml
+++ b/config.yaml
@@ -117,20 +117,23 @@ options:
     default: "1.1.1.1,8.8.8.8"
     type: string
   
-  enable-gpu:
+  compute-runtime:
     description: |
-      Enable GPU support for this worker.
-      Requires NVIDIA drivers and nvidia-container-toolkit installed on host.
+      GPU compute runtime to enable: 'none', 'cuda', or 'rocm'.
+      - 'none': No GPU support (default)
+      - 'cuda': Enable NVIDIA CUDA GPU support
+      - 'rocm': Enable AMD ROCm GPU support
+      When enabled, automatically installs container toolkit and configures GPU passthrough.
       Worker will be tagged with GPU capabilities for job targeting.
-      Default: false
-    default: false
-    type: boolean
+      Default: none
+    default: "none"
+    type: string
   
   gpu-device-ids:
     description: |
       GPU device IDs to expose to worker (comma-separated).
       Use "all" to expose all GPUs, or specify devices like "0,1".
-      Only used when enable-gpu is true.
+      Only used when compute-runtime is set to 'cuda' or 'rocm'.
       Default: all
     default: "all"
     type: string
