test(ci): Add regression test for shared storage marker fix
Adds explicit verification that units wait for .lxc_shared_storage marker
before downloading binaries when shared-storage=lxc is configured.

New test step 'verify-marker' checks:
- No local downloads to /opt/concourse/ before marker setup
- Binaries only in shared storage after marker
- Single download by leader, workers reuse binaries
- Both units share same binary inode

Prevents regression of bug fixed in d95498f where units would download
to local storage even when shared storage was configured.

Changes:
- scripts/deploy-test.sh: Add step_verify_marker() function (144 lines)
- scripts/deploy-test.sh: Add verify-marker to ALL_STEPS and help text
- scripts/deploy-test.sh: Add verify-marker to step execution case
- .github/workflows/ci.yml: Add verify-marker step to test-shared-storage-auto
- .github/workflows/ci.yml: Add verify-marker step to test-shared-storage-web-worker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -233,6 +233,9 @@ jobs:
       - name: Verify
         run: ./scripts/deploy-test.sh --mode=auto --shared-storage=lxc --skip-cleanup --steps=verify
 
+      - name: Verify Marker File Fix
+        run: ./scripts/deploy-test.sh --mode=auto --shared-storage=lxc --skip-cleanup --steps=verify-marker
+
       - name: Test Mounts
         run: ./scripts/deploy-test.sh --mode=auto --shared-storage=lxc --skip-cleanup --steps=mounts
 
@@ -311,6 +314,9 @@ jobs:
 
       - name: Verify
         run: ./scripts/deploy-test.sh --mode=web+worker --shared-storage=lxc --skip-cleanup --steps=verify
+
+      - name: Verify Marker File Fix
+        run: ./scripts/deploy-test.sh --mode=web+worker --shared-storage=lxc --skip-cleanup --steps=verify-marker
 
       - name: Test Mounts
         run: ./scripts/deploy-test.sh --mode=web+worker --shared-storage=lxc --skip-cleanup --steps=mounts
